# todo-py-django

./: Makefile  README.md  pyproject.toml
.github/workflows/: pytest.yml
base/: models.py
base/tests/: test_apps.py  test_models.py
todo_app/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
