[tool.poetry]
name = "todo_app"
version = "0.1.0"
description = "Example project for performing CRUD operations using Python/Django"
authors = ["Anshul Chauhan <anshulchauhan@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
mypy = "^0.971"
pytest = "^7.1.2"
pytest-django = "^4.5.2"
pdbpp = "^0.10.3"
pytest-cov = "^3.0.0"
mixer = "^7.2.2"
django-stubs = "^1.12.0"
isort = "^5.10.1"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--nomigrations --cov=. --cov-report=xml --cov-report=term --cov-report=html"

[tool.coverage.run]
omit = [
  "*apps.py",
  "*migrations/*",
  "*settings*",
  "*tests/*",
  "*urls.py",
  "*sgi.py",
  "manage.py",
  "*admin.py",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = [
    "mixer.*",
]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "todo_app.settings"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
